crates/rskim-proxy/tests/compile_fail/ac24_auth_mode_exhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/compile_fail/ac24_auth_mode_exhaustive_match.rs:14:11
   |
14 |     match m {
   |           ^ pattern `_` not covered
   |
note: `AuthMode` defined here
  --> src/authmode.rs
   |
   | pub enum AuthMode {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `AuthMode`
   = note: `AuthMode` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
18 ~         AuthMode::Ambiguous => "ambiguous",
19 ~         _ => todo!(),
   |
